syntax = "proto3";

package greet;

option go_package = "github.com/richardimaoka/go-grpc-streaming/proto";

message GreetRequest { string first_name = 1; }

message GreetResponse { string result = 1; }

message RegisterClient {
  string current_directory = 1;
  string ternminal_client_token = 2;
  string app_page_token = 3;
}

message ExecCommand { string command = 1; }

service ExecCommandStreaming {
  rpc PollCommands(RegisterClient) returns (stream ExecCommand);
}

service GreetService {
  rpc Greet(GreetRequest) returns (GreetResponse);
  rpc GreetManyTimes(GreetRequest) returns (stream GreetResponse);
  rpc LongGreet(stream GreetRequest) returns (GreetResponse);
  rpc GreetEveryone(stream GreetRequest) returns (stream GreetResponse);
  rpc GreetWithDeadline(GreetRequest) returns (GreetResponse);
};